{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 658,
  "lineage": "0a690bde-d7a1-94be-0018-220f6f8f9634",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a54aef4ef3b5f881",
            "arn": "arn:aws:ec2:us-east-2:919636632680:instance/i-05f34d5f2a052b179",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f34d5f2a052b179",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "class_key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-018713dcf14a1b62e",
            "private_dns": "ip-10-0-10-10.us-east-2.compute.internal",
            "private_ip": "10.0.10.10",
            "public_dns": "ec2-18-218-164-49.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.164.49",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00be764d30bf58de8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05530d6169e525ce9",
            "tags": {
              "Env": "dev",
              "Name": "Serv1",
              "Owner": "user02-tf-demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0321d9494622fdabf",
              "sg-0c50e366e82ce9458"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-1",
            "aws_security_group.sg-2",
            "aws_subnet.subnet1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a54aef4ef3b5f881",
            "arn": "arn:aws:ec2:us-east-2:919636632680:instance/i-01d3c63e21cdbaffe",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01d3c63e21cdbaffe",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "class_key2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d3ec94a274041521",
            "private_dns": "ip-10-0-10-11.us-east-2.compute.internal",
            "private_ip": "10.0.10.11",
            "public_dns": "ec2-18-218-26-174.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.26.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-049c32cfa5aa5bd4e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05530d6169e525ce9",
            "tags": {
              "Env": "dev",
              "Name": "Serv2",
              "Owner": "user02-tf-demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0321d9494622fdabf",
              "sg-0c50e366e82ce9458"
            ]
          },
          "dependencies": [
            "aws_key_pair.key-class2",
            "aws_security_group.sg-1",
            "aws_security_group.sg-2",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:919636632680:internet-gateway/igw-04e977e4fd7a1410d",
            "id": "igw-04e977e4fd7a1410d",
            "owner_id": "919636632680",
            "tags": {
              "Name": "Gateway 1 en us-east-2a"
            },
            "vpc_id": "vpc-0063157541c1df386"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0eb5eb83fc12d57b0",
            "owner_id": "919636632680",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e977e4fd7a1410d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Gateway por defecto"
            },
            "vpc_id": "vpc-0063157541c1df386"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa15bec2e6622ecf",
            "route_table_id": "rtb-0eb5eb83fc12d57b0",
            "subnet_id": "subnet-05530d6169e525ce9"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a4c4c59030eea12",
            "route_table_id": "rtb-0eb5eb83fc12d57b0",
            "subnet_id": "subnet-092cf07c35ebc1acf"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet2",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b15423866a939f99",
            "route_table_id": "rtb-0eb5eb83fc12d57b0",
            "subnet_id": "subnet-082e5f6db4b9aa8be"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.subnet3",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:919636632680:security-group/sg-0321d9494622fdabf",
            "description": "Permite Trafico solo ICMP, y SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Salida permitida a cualquier red",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0321d9494622fdabf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Entrada a VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp Entrada a VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_icmp_ssh",
            "name_prefix": null,
            "owner_id": "919636632680",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ACL-IN-OUT-SG1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0063157541c1df386"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:919636632680:security-group/sg-0c50e366e82ce9458",
            "description": "Permite Trafico HTTP, HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Salida permitida a cualquier red",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c50e366e82ce9458",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Entrada a VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Entrada a VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_http",
            "name_prefix": null,
            "owner_id": "919636632680",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ACL-IN-OUT-SG2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0063157541c1df386"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:919636632680:subnet/subnet-05530d6169e525ce9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-05530d6169e525ce9",
            "map_public_ip_on_launch": true,
            "owner_id": "919636632680",
            "tags": {
              "Name": "Subnet1 - us-east-2a"
            },
            "vpc_id": "vpc-0063157541c1df386"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:919636632680:subnet/subnet-092cf07c35ebc1acf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-092cf07c35ebc1acf",
            "map_public_ip_on_launch": true,
            "owner_id": "919636632680",
            "tags": {
              "Name": "Subnet2 - us-east-2b"
            },
            "vpc_id": "vpc-0063157541c1df386"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:919636632680:subnet/subnet-082e5f6db4b9aa8be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-082e5f6db4b9aa8be",
            "map_public_ip_on_launch": true,
            "owner_id": "919636632680",
            "tags": {
              "Name": "Subnet3 - us-east-2c"
            },
            "vpc_id": "vpc-0063157541c1df386"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:919636632680:vpc/vpc-0063157541c1df386",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03dc01b22e5035730",
            "default_route_table_id": "rtb-062208e8e863a1647",
            "default_security_group_id": "sg-0bfd32d5f091a9a70",
            "dhcp_options_id": "dopt-bef947d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0063157541c1df386",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-062208e8e863a1647",
            "owner_id": "919636632680",
            "tags": {
              "Name": "Main VPC 1"
            }
          }
        }
      ]
    }
  ]
}